--- a/_quarto.yml
+++ b/_quarto.yml
@@ -21,7 +21,7 @@ website:
         href: whiteboard02/index.qmd
       - text: "Sustainability"
         href: whiteboard03/index.qmd
-      - text: "Design"
+      - text: "Hobby"
         href: whiteboard04/index.qmd
       - text: "CV"
         href: cv/index.qmd
